--- a/package.json
+++ b/package.json
@@ -1,53 +1,59 @@
 {
-  "name": "bisd-inventory-identifier-client",
-  "version": "1.0.0",
-  "description": "Chromebook extension to list inventory information",
-  "main": "dist/app.js",
-  "scripts": {
-    "dev": "NODE_ENV='development' ./node_modules/webpack/bin/webpack.js --watch --progress --config build/webpack.dev.babel.js",
-    "build": "NODE_ENV='development' ./node_modules/webpack/bin/webpack.js --progress --config build/webpack.dev.babel.js",
-    "build-prod": "NODE_ENV='production' ./node_modules/webpack/bin/webpack.js --progress --config build/webpack.prod.babel.js",
-    "lint": "./node_modules/eslint/bin/eslint.js  --ignore-pattern !.eslintrc.js *.js .*.js build/*.js src/*.js src/js/*.js src/components/*.vue"
-  },
-  "keywords": [
-    "Bullard ISD",
-    "Inventory",
-    "Chromebook"
-  ],
-  "author": "Kory Prince <korylprince@gmail.com>",
-  "license": "BSD-2-Clause",
-  "dependencies": {
-    "axios": "0.16.1",
-    "vue": "2.3.3",
-    "vuetify": "^0.11.1"
-  },
-  "devDependencies": {
-    "autoprefixer": "^7.0.1",
-    "babel-core": "^6.22.1",
-    "babel-loader": "^7.0.0",
-    "babel-plugin-transform-runtime": "^6.22.0",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-runtime": "^6.22.0",
-    "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.28.0",
-    "eslint": "^3.14.1",
-    "eslint-config-vue": "^2.0.2",
-    "eslint-plugin-promise": "^3.4.0",
-    "eslint-plugin-standard": "^3.0.1",
-    "eslint-plugin-vue": "^2.0.1",
-    "extract-text-webpack-plugin": "^2.1.0",
-    "html-webpack-plugin": "^2.28.0",
-    "optimize-css-assets-webpack-plugin": "^1.3.1",
-    "optimize-js-plugin": "0.0.4",
-    "postcss-loader": "^2.0.3",
-    "precss": "^1.4.0",
-    "style-loader": "^0.17.0",
-    "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.1",
-    "vue-loader": "^12.0.2",
-    "vue-template-compiler": "^2.3.0",
-    "webpack": "^2.4.1",
-    "webpack-dev-server": "^2.4.5",
-    "webpack-merge": "^4.1.0"
-  }
+    "name": "bisd-inventory-identifier-client",
+    "version": "1.0.0",
+    "description": "Chromebook extension to list inventory information",
+    "main": "dist/app.js",
+    "scripts": {
+        "dev": "webpack --watch --progress --config build/webpack.dev.babel.js",
+        "dev-server": "webpack-dev-server --watch --config build/webpack.dev.babel.js",
+        "build": "webpack --progress --config build/webpack.dev.babel.js",
+        "build-prod": "webpack --progress --config build/webpack.prod.babel.js",
+        "lint": "eslint  --fix --ext .js --ext .vue src build"
+    },
+    "keywords": [
+        "Bullard ISD",
+        "Inventory",
+        "Chromebook"
+    ],
+    "author": "Kory Prince <korylprince@gmail.com>",
+    "license": "BSD-2-Clause",
+    "dependencies": {
+        "axios": "0.18.0",
+        "vue": "2.5.17",
+        "vuetify": "^1.3.12"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.2.0",
+        "@babel/plugin-transform-runtime": "^7.2.0",
+        "@babel/preset-env": "^7.2.0",
+        "@babel/register": "^7.0.0",
+        "@babel/runtime": "^7.2.0",
+        "autoprefixer": "^9.4.2",
+        "babel-eslint": "^10.0.1",
+        "babel-loader": "^8.0.4",
+        "clean-webpack-plugin": "^1.0.0",
+        "copy-webpack-plugin": "^4.6.0",
+        "css-loader": "^2.0.0",
+        "eslint": "^5.9.0",
+        "eslint-config-google": "^0.11.0",
+        "eslint-plugin-html": "^5.0.0",
+        "eslint-plugin-promise": "^4.0.1",
+        "eslint-plugin-vue": "^5.0.0",
+        "html-webpack-plugin": "^3.2.0",
+        "mini-css-extract-plugin": "^0.5.0",
+        "node-sass": "^4.10.0",
+        "optimize-css-assets-webpack-plugin": "^5.0.1",
+        "postcss-loader": "^3.0.0",
+        "sass-loader": "^7.1.0",
+        "style-loader": "^0.23.1",
+        "stylus": "^0.54.5",
+        "stylus-loader": "^3.0.2",
+        "uglifyjs-webpack-plugin": "^2.0.1",
+        "vue-loader": "^15.4.2",
+        "vue-template-compiler": "^2.5.17",
+        "webpack": "^4.27.1",
+        "webpack-cli": "^3.1.2",
+        "webpack-dev-server": "^3.1.10",
+        "webpack-merge": "^4.1.4"
+    }
 }
